# beacon2-cbi-tools

./: .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Changes  MANIFEST.in  README.md  README.md.in  RELEASING.md  SUPPORT.md  VERSION  cpanfile  do_readme.sh  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/: RELEASING.md  SECURITY.md
.github/workflows/: annotation-integration.yml  build-and-test.yml  docker-build-multi-arch.yml  documentation.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  tests.yml
CINECA_synthetic_cohort_EUROPE_UK1/: Beacon-v2-Models_CINECA_UK1.xlsx  README.md  bff  current
CINECA_synthetic_cohort_EUROPE_UK1/current/: manifest.json
about/about/: index.html
about/citation/: index.html
about/disclaimer/: index.html
apptainer/: README.md
data-beaconization/: index.html
deploy/: 01_download_external_data.py  02_test_deployment.sh
docker/: Dockerfile  README.md  makefile.docker
docs/: data-beaconization.md  index.md  quick-start.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: overview.md
docs-site/docs/about/: citation.md  disclaimer.md  project.md  project.mdx
docs-site/docs/examples/: hg38.mdx
docs-site/docs/getting-started/: annotation-data.md  apptainer.mdx  docker.mdx  from-source.mdx  installation.md  non-containerized.mdx  quick-start.md  what-should-i-run.md
docs-site/docs/implementation/: core-toolchain.md  overview.md  utilities.md
docs-site/docs/reference/: cli.md  configuration.md  mongodb.md  outputs.md  supported-data.md  utilities.md  validation-and-reproducibility.md
docs-site/docs/troubleshooting/: faq.md  index.md
docs-site/docs/workflows/: data-beaconization.md  data-beaconization.mdx  recipes.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs/about/: about.md  disclaimer.md
docs/help/: faq.md
download-and-installation/apptainer-based/: index.html
download-and-installation/docker-based/: index.html
download-and-installation/non-containerized/: index.html
examples/: README.md  cnag_hpc.sh  param_hg38.yaml
examples/hg38/: index.html
help/faq/: index.html
help/troubleshooting/: index.html
lib/BFF/: Config.pm  Help.pm  Output.pm  Tools.pm
lib/internal/complete/: bff2html.pl  bff2json.pl  vcf2bff.pl
lib/internal/partial/: run_bff2html.sh  run_bff2mongodb.sh  run_tsv2vcf.sh
non-containerized/: README.md
pipeline/internal/complete/: bff2html.pl  vcf2bff.pl
pipeline/internal/partial/: run_bff2html.sh  run_tsv2vcf.sh  run_vcf2bff.sh
quick-start/: index.html
scripts/: 02_test_deployment.sh  cnag_hpc.sh
search/: search_index.json
src/bff_tools/: __init__.py  browser.py  cli.py  config.py  console.py  demo.py  doctor.py  integration.py  orchestrator.py  output.py  parity.py  redaction.py  resource_installer.py  validator.py  vcf2bff.py  vcf_converter.py  version.py
src/bff_tools/browser_assets/: report.html
src/bff_tools/integration_assets/: README.md
test/: README.md
test/vcf/: param.yaml
testdata/: README.md
testdata/tsv/: param.yaml
testdata/vcf/: cineca-parity-manifest.json  log.txt  param.yaml
tests/: test_browser.py  test_cli.py  test_config.py  test_console.py  test_demo.py  test_doctor.py  test_integration.py  test_models2xlsx.py  test_orchestrator.py  test_output.py  test_redaction.py  test_resource_installer.py  test_schema_registry.py  test_validator.py  test_vcf2bff_mapping.py  test_vcf_conversion.py  test_vcf_parity.py  test_version.py
tools/: README.md  compare_bff_outputs.py  compare_vcf_converters.py  extract_annotated_vcf_fixture.py
utilities/: index.html
utils/: README.md
utils/_bff_browser/: README.md  app.py
utils/_models2xlsx/: .gitignore  README.md  defaultSchema2xlsx.sh  models2xlsx.py
utils/bff_browser/: README.md  app.py
utils/bff_portal/: README.md
utils/bff_queue/: README.md
utils/bff_validator/: README.md  bff-validator
(+74 files in other folders)
